plugins/gpio: add support for libgpiod v2.x

--- a/plugins/gpio/CMakeLists.txt
+++ b/plugins/gpio/CMakeLists.txt
@@ -30,6 +30,9 @@ if (LIBGPIOD_FOUND)
     include_directories(${module_name} PRIVATE ${LIBGPIOD_INCLUDE_DIRS})
     link_directories(${LIBGPIOD_LIBRARY_DIRS})
     link_libraries(${LIBGPIOD_LIBRARIES})
+    if (LIBGPIOD_VERSION VERSION_GREATER_EQUAL "2.0")
+        add_compile_definitions(GPIOPLUGIN_LIBGPIOD_API_V2)
+    endif()
 else()
     message("ERROR: libgpiod not found!")
 endif()
